added browse files page

--- a/vts-remote/src/index.css
+++ b/vts-remote/src/index.css
@@ -307,3 +307,20 @@ video {
 .setting-desc{
     padding: 0 4px 4px 2px;
 }
+
+.icon{
+    display: inline-block;
+    width: 20px;
+    min-width: 20px;
+    text-align: center;
+    margin: -4px 0
+}
+.icon.red {
+    color: rgb(255, 45, 45);
+}
+.icon.green {
+    color: rgb(46, 255, 46);
+}
+.icon.yellow {
+    color: yellow;
+}
